--- a/app/buck2_interpreter/Cargo.toml
+++ b/app/buck2_interpreter/Cargo.toml
@@ -39,3 +39,6 @@ dice_futures = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fbcode_build)"] }
